<resources>
    <string name="app_name">Pocket Grimoire</string>
    <string name="username">username</string>
    <string name="or">OR</string>
    <string name="make_an_account"><u>make an account</u></string>
    <string name="login">login</string>
    <string name="sign_in_container">Sign in Container</string>
    <string name="forgot_password">forgot password?</string>
    <string name="password">password</string>
    <string name="enter_password">enter password</string>
    <string name="green_gold_diamond_accent">green gold diamond accent</string>
    <string name="sign_in">SIGN IN</string>
    <string name="title_activity_admin_navbar">AdminNavbarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="account">account</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="username_all_caps">USERNAME</string>
    <string name="choose_today">choose today?</string>
    <string name="what_will_you">what will you</string>
    <string name="game_master">game master</string>
    <string name="player">player</string>
    <string name="fragment_user_type_selection">fragment_user_type_selection</string>
    <string name="character_name">character name</string>
    <string name="characters">characters</string>
    <string name="preference_file_key">com.example.pocketgrimoire.PREFERENCE_FILE_KEY</string>
    <string name="preference_user_id_key">com.example.pocketgrimoire.USER_ID_KEY</string>
    <!-- Array list for dropdown menu items -->
    <string-array name="race_array">
        <item>dragonborn</item>
        <item>dwarf</item>
        <item>elf</item>
        <item>gnome</item>
        <item>half-elf</item>
        <item>halfing</item>
        <item>human</item>
        <item>triefling</item>
    </string-array>

    <string-array name="class_array">
        <item>barbarian</item>
        <item>bard</item>
        <item>cleric</item>
        <item>druid</item>
        <item>fighter</item>
        <item>monk</item>
        <item>paladin</item>
        <item>ranger</item>
        <item>rogue</item>
        <item>sorcerer</item>
        <item>warlock</item>
        <item>wizard</item>
    </string-array>

    <string-array name="background">
        <item>Acolyte</item>
    </string-array>

    <string-array name="language_array">
        <item>abyssal</item>
        <item>celestial</item>
        <item>common</item>
        <item>deep-speech</item>
        <item>draconic</item>
        <item>dwarvish</item>
        <item>elvish</item>
        <item>giant</item>
        <item>gnomish</item>
        <item>goblin</item>
        <item>halfling</item>
        <item>infernal</item>
        <item>orc</item>
        <item>primordial</item>
        <item>sylvan</item>
        <item>undercommon</item>
    </string-array>

    <string-array name="character_alignment_array">
        <item>chaotic-neutral</item>
        <item>chaotic-evil</item>
        <item>chaotic-good</item>
        <item>lawful-neutral</item>
        <item>lawful-evil</item>
        <item>lawful-good</item>
        <item>neutral</item>
        <item>neutral-evil</item>
        <item>neutral-good</item>
    </string-array>

    <string-array name="gender_array">
        <item>male</item>
        <item>female</item>
        <item>nonbinary</item>
    </string-array>

    <string-array name="hair_color_array">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
        <item>black</item>
        <item>white</item>
        <item>gray</item>
    </string-array>

    <string-array name="eye_color_array">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
        <item>black</item>
        <item>white</item>
        <item>gray</item>
    </string-array>

    <string-array name="skin_color_array">
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
        <item>black</item>
        <item>white</item>
        <item>gray</item>
    </string-array>

    <string name="dice_title">DICE</string>
    <string name="dice_roll">Roll</string>
    <string name="dice_press_hint">press dice to roll</string>
    <string name="dice_rolled_prefix">you rolled a </string>
    <string name="dice_count_hint">count</string>
    <string name="dice_current_die_default">d20</string>
    <string name="dice_big_default_number">20</string>

    <string name="cd_d4">Roll a d4</string>
    <string name="cd_d6">Roll a d6</string>
    <string name="cd_d8">Roll a d8</string>
    <string name="cd_d10">Roll a d10</string>
    <string name="cd_d12">Roll a d12</string>
    <string name="cd_d20">Roll a d20</string>
    <string name="cd_d100">Roll a d100</string>

    <string name="die_n4">4</string>
    <string name="die_n6">6</string>
    <string name="die_n8">8</string>
    <string name="die_n10">10</string>
    <string name="die_n12">12</string>
    <string name="die_n20">20</string>
    <string name="die_n100">100</string>

    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">sign out</string>
    <string name="item_1">Item 1</string>
    <string name="spell_1">spell 1</string>
    <string name="game_master_title">GAME MASTER</string>
    <string name="spells">Spells</string>
    <string name="add_new_spell">ADD NEW SPELL</string>
    <string name="ability_1">ability 1</string>
    <string name="abilities">Abilities</string>
    <string name="add_new_ability">ADD NEW ABILITY</string>
    <string name="item_name">item name</string>
    <string name="dice_lowercase">dice</string>
    <string name="random_ability">Random Ability</string>
    <string name="utilities">utilities</string>
    <string name="inventory">Inventory</string>
    <string name="spellbook">Spellbook</string>
    <string name="abilities_capital">Abilities</string>
    <string name="items">Items</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="return_to_login_screen"><u>return to login screen</u></string>
    <string name="sign_up">SIGN UP</string>
</resources>