<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserTypeSelectionFragment">


    <!-- Welcome Text -->
    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/inknut_antiqua"
        android:text="@string/welcome_back"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_username_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inknut_antiqua"
        android:text="@string/username_all_caps"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text_view" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/line_decorator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_username_text_view" />

    <TextView
        android:id="@+id/what_will_you_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/inknut_antiqua"
        android:text="@string/what_will_you"
        android:textColor="#D9D9D9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12" />

    <TextView
        android:id="@+id/choose_today_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inknut_antiqua"
        android:text="@string/choose_today"
        android:textColor="#D9D9D9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_will_you_text_view" />

    <ImageView
        android:id="@+id/gameMasterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_today_text_view" />

    <TextView
        android:id="@+id/game_master_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inknut_antiqua"
        android:text="@string/game_master"
        android:textColor="@color/gold"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/gameMasterButton"
        app:layout_constraintEnd_toEndOf="@+id/gameMasterButton"
        app:layout_constraintStart_toStartOf="@+id/gameMasterButton"
        app:layout_constraintTop_toTopOf="@+id/gameMasterButton" />

    <ImageView
        android:id="@+id/playerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameMasterButton" />

    <TextView
        android:id="@+id/player_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inknut_antiqua"
        android:text="@string/player"
        android:textColor="@color/gold"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/playerButton"
        app:layout_constraintEnd_toEndOf="@+id/playerButton"
        app:layout_constraintStart_toStartOf="@+id/playerButton"
        app:layout_constraintTop_toTopOf="@+id/playerButton" />

    <ImageView
        android:id="@+id/lineAccent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line_decorator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerButton"
        app:layout_constraintVertical_bias="0.387" />

</androidx.constraintlayout.widget.ConstraintLayout>